Verify version and source in disruption tests